Add initial upload image placeholder and Upload.png file

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
                     <div id="spinner" class="spinner-border text-primary" role="status" style="display: none;">
                         <span class="visually-hidden">Loading...</span>
                     </div>
-                    <img id="imageCanvas" src="" alt="Upload an image to start editing" class="img-fluid">
+                    <img id="imageCanvas" src="Upload.png" alt="Upload an image to start editing" class="img-fluid">
                 </div>
             </div>
         </div>
